--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ body {
     background-repeat: no-repeat;
 }
 .glassmorph{
-    visibility: hidden;
     height: 100%;
     width: 100%;
     display: flex;
@@ -20,6 +19,9 @@ body {
     align-items: center;
 }
 .hidden{
+    visibility: hidden;
+}
+.visible{
     visibility: visible;
 }
 .glass {
