--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ body {
     height: 100%;
     background-size: cover;
     background-repeat: no-repeat;
+    display: grid;
+    place-items: center;
 }
 .glassmorph{
     height: 100%;
@@ -19,7 +21,7 @@ body {
     align-items: center;
 }
 .hidden{
-    visibility: hidden;
+    display: none;
 }
 .visible{
     visibility: visible;
@@ -40,15 +42,60 @@ span{
     font-size: 5rem;
     color: #724100;
 }
+button{
+    background-color: #724100;
+    font-size: 1.5rem;
+    color: #fff;
+    width: 7.5rem;
+    padding: 17px;
+    border-radius: 15px;
+    outline: none;
+    animation: glow 3s linear infinite;
+}
+@keyframes glow {
+    0% {
+        box-shadow: 0 0 30px #ffd59f;
+        box-shadow: 0 0 35px #ffd59f;
+        box-shadow: 0 0 40px #ffd59f;
+    }
+    10% {
+        box-shadow: 0 0 30px #ffdcae;
+    }
+    50% {
+        box-shadow: 0 0 30px #ffe4c1;
+        box-shadow: 0 0 35px #ffe4c1;
+        box-shadow: 0 0 40px #ffe4c1;
+    }
+    75% {
+        box-shadow: 0 0 30px #ffefda;
+    }
+    100% {
+        box-shadow: 0 0 30px #ffffff;
+        box-shadow: 0 0 35px #ffffff;
+        box-shadow: 0 0 40px #ffffff;
+    }
+    
+}
+.inp{
+    width: 10%;
+    text-align: center;
+}
+.inp input {
+    font-size: 1.5rem;
+    width: 110px;
+    height: 110px;
+    box-sizing: border-box;
+    padding: 15px;
+    margin: 15px;
+    border-radius: 50%;
+    text-align: center;
+    border: 2px solid #724100;
+}
 .flex{
-     display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;   
 }
-
-
-
-
 
 
 
