--- a/styles.css
+++ b/styles.css
@@ -61,8 +61,8 @@ span{
 /* Responsive Design */
 @media (max-width: 768px) {
     .glass {
-        width: 80%;
-        height: auto;
+        width: 30%;
+        height: 80%;
     }
     span {
         font-size: 3rem;
@@ -76,15 +76,16 @@ span{
 
 @media (max-width: 480px) {
     .glass {
-        width: 90%;
+        width: 20%;
+        height: 80%;
         margin: 15px;
     }
     span {
-        font-size: 2rem;
+        font-size: 1rem;
     }
     .btns {
-        font-size: 0.9rem;
-        width: 5.5rem;
+        font-size: 0.5rem;
+        width: 3.5rem;
         padding: 8px;
     }
 }
